// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`Product Skeletons stories snapshot > MainSkeleton story renders and matches snapshot 1`] = `
<div>
  <div
    class="p-4"
  >
    <div
      class="block md:hidden space-y-4"
    >
      <div
        class="bg-accent animate-pulse rounded-ui h-8 w-3/4"
        data-slot="skeleton"
      />
      <div
        class="bg-accent animate-pulse rounded-ui h-4 w-full"
        data-slot="skeleton"
      />
      <div
        class="bg-accent animate-pulse rounded-ui h-4 w-2/3"
        data-slot="skeleton"
      />
    </div>
    <div
      class="grid grid-cols-1 lg:grid-cols-2 gap-8"
    >
      <div
        class="space-y-4"
      >
        <div
          class="bg-accent animate-pulse rounded-ui aspect-square w-full"
          data-slot="skeleton"
        />
        <div
          class="flex space-x-2"
        >
          <div
            class="bg-accent animate-pulse rounded-ui aspect-square w-16 h-16"
            data-slot="skeleton"
          />
          <div
            class="bg-accent animate-pulse rounded-ui aspect-square w-16 h-16"
            data-slot="skeleton"
          />
          <div
            class="bg-accent animate-pulse rounded-ui aspect-square w-16 h-16"
            data-slot="skeleton"
          />
          <div
            class="bg-accent animate-pulse rounded-ui aspect-square w-16 h-16"
            data-slot="skeleton"
          />
        </div>
      </div>
      <div
        class="space-y-6"
      >
        <div
          class="hidden md:block space-y-4"
        >
          <div
            class="bg-accent animate-pulse rounded-ui h-10 w-3/4"
            data-slot="skeleton"
          />
          <div
            class="bg-accent animate-pulse rounded-ui h-4 w-full"
            data-slot="skeleton"
          />
          <div
            class="bg-accent animate-pulse rounded-ui h-4 w-2/3"
            data-slot="skeleton"
          />
        </div>
        <div
          class="space-y-2"
        >
          <div
            class="bg-accent animate-pulse rounded-ui h-8 w-32"
            data-slot="skeleton"
          />
          <div
            class="bg-accent animate-pulse rounded-ui h-4 w-24"
            data-slot="skeleton"
          />
        </div>
        <div
          class="space-y-4"
        >
          <div
            class="space-y-2"
          >
            <div
              class="bg-accent animate-pulse rounded-ui h-4 w-16"
              data-slot="skeleton"
            />
            <div
              class="flex space-x-2"
            >
              <div
                class="bg-accent animate-pulse rounded-ui w-8 h-8 rounded-full"
                data-slot="skeleton"
              />
              <div
                class="bg-accent animate-pulse rounded-ui w-8 h-8 rounded-full"
                data-slot="skeleton"
              />
              <div
                class="bg-accent animate-pulse rounded-ui w-8 h-8 rounded-full"
                data-slot="skeleton"
              />
              <div
                class="bg-accent animate-pulse rounded-ui w-8 h-8 rounded-full"
                data-slot="skeleton"
              />
            </div>
          </div>
          <div
            class="space-y-2"
          >
            <div
              class="bg-accent animate-pulse rounded-ui h-4 w-12"
              data-slot="skeleton"
            />
            <div
              class="flex space-x-2"
            >
              <div
                class="bg-accent animate-pulse rounded-ui w-12 h-10"
                data-slot="skeleton"
              />
              <div
                class="bg-accent animate-pulse rounded-ui w-12 h-10"
                data-slot="skeleton"
              />
              <div
                class="bg-accent animate-pulse rounded-ui w-12 h-10"
                data-slot="skeleton"
              />
            </div>
          </div>
        </div>
        <div
          class="space-y-4"
        >
          <div
            class="flex items-center space-x-4"
          >
            <div
              class="bg-accent animate-pulse rounded-ui h-10 w-24"
              data-slot="skeleton"
            />
            <div
              class="bg-accent animate-pulse rounded-ui h-10 flex-1"
              data-slot="skeleton"
            />
          </div>
          <div
            class="bg-accent animate-pulse rounded-ui h-10 w-full"
            data-slot="skeleton"
          />
        </div>
      </div>
    </div>
    <div
      class="mt-16 space-y-4"
    >
      <div
        class="rounded-ui border p-4"
      >
        <div
          class="bg-accent animate-pulse rounded-ui h-6 w-48"
          data-slot="skeleton"
        />
      </div>
      <div
        class="rounded-ui border p-4"
      >
        <div
          class="bg-accent animate-pulse rounded-ui h-6 w-48"
          data-slot="skeleton"
        />
      </div>
      <div
        class="rounded-ui border p-4"
      >
        <div
          class="bg-accent animate-pulse rounded-ui h-6 w-48"
          data-slot="skeleton"
        />
      </div>
    </div>
  </div>
</div>
`;

exports[`Product Skeletons stories snapshot > RecommendationSkeleton story renders and matches snapshot 1`] = `
<div>
  <div
    class="p-4"
  >
    <div
      class="w-full section-container py-6 animate-pulse"
    >
      <div
        class="flex items-center justify-between"
      >
        <div
          class="bg-accent animate-pulse rounded-ui h-8 md:h-9 w-64"
          data-slot="skeleton"
        />
      </div>
      <div
        class="py-6"
      >
        <div
          class="relative w-full"
        >
          <div
            class="overflow-hidden"
          >
            <div
              class="flex -ml-4 items-stretch flex-nowrap"
            >
              <div
                class="w-[348px] md:w-[256px] 2xl:w-[288px] basis-auto py-1 flex"
              >
                <div
                  class="w-full max-w-full min-w-0 flex"
                >
                  <div
                    class="bg-card text-card-foreground rounded-ui border-ui border-border shadow-ui border-0 overflow-hidden w-full max-w-full flex flex-col h-full gap-0 py-0"
                    data-slot="card"
                  >
                    <div
                      class="@container/card-header grid auto-rows-min grid-rows-[auto_auto] items-start gap-2 has-data-[slot=card-action]:grid-cols-[1fr_auto] [.border-b]:pb-6 p-0"
                      data-slot="card-header"
                    >
                      <div
                        class="bg-accent animate-pulse rounded-ui w-full"
                        data-slot="skeleton"
                        style="aspect-ratio: 0.8 / 1;"
                      />
                    </div>
                    <div
                      class="px-4 pt-3 pb-0"
                      data-slot="card-content"
                    >
                      <div
                        class="flex items-center gap-1"
                      >
                        <div
                          class="bg-accent animate-pulse rounded-ui h-7 w-7"
                          data-slot="skeleton"
                        />
                        <div
                          class="bg-accent animate-pulse rounded-ui h-7 w-7"
                          data-slot="skeleton"
                        />
                      </div>
                    </div>
                    <div
                      class="px-4 pt-2 pb-0"
                      data-slot="card-content"
                    >
                      <div
                        class="bg-accent animate-pulse rounded-ui h-4 w-full mb-1"
                        data-slot="skeleton"
                      />
                      <div
                        class="bg-accent animate-pulse rounded-ui h-4 w-3/4"
                        data-slot="skeleton"
                      />
                    </div>
                    <div
                      class="px-4 pt-2 pb-4"
                      data-slot="card-content"
                    >
                      <div
                        class="bg-accent animate-pulse rounded-ui h-5 w-16"
                        data-slot="skeleton"
                      />
                    </div>
                  </div>
                </div>
              </div>
              <div
                class="w-[348px] md:w-[256px] 2xl:w-[288px] basis-auto py-1 flex"
              >
                <div
                  class="w-full max-w-full min-w-0 flex"
                >
                  <div
                    class="bg-card text-card-foreground rounded-ui border-ui border-border shadow-ui border-0 overflow-hidden w-full max-w-full flex flex-col h-full gap-0 py-0"
                    data-slot="card"
                  >
                    <div
                      class="@container/card-header grid auto-rows-min grid-rows-[auto_auto] items-start gap-2 has-data-[slot=card-action]:grid-cols-[1fr_auto] [.border-b]:pb-6 p-0"
                      data-slot="card-header"
                    >
                      <div
                        class="bg-accent animate-pulse rounded-ui w-full"
                        data-slot="skeleton"
                        style="aspect-ratio: 0.8 / 1;"
                      />
                    </div>
                    <div
                      class="px-4 pt-3 pb-0"
                      data-slot="card-content"
                    >
                      <div
                        class="flex items-center gap-1"
                      >
                        <div
                          class="bg-accent animate-pulse rounded-ui h-7 w-7"
                          data-slot="skeleton"
                        />
                        <div
                          class="bg-accent animate-pulse rounded-ui h-7 w-7"
                          data-slot="skeleton"
                        />
                      </div>
                    </div>
                    <div
                      class="px-4 pt-2 pb-0"
                      data-slot="card-content"
                    >
                      <div
                        class="bg-accent animate-pulse rounded-ui h-4 w-full mb-1"
                        data-slot="skeleton"
                      />
                      <div
                        class="bg-accent animate-pulse rounded-ui h-4 w-3/4"
                        data-slot="skeleton"
                      />
                    </div>
                    <div
                      class="px-4 pt-2 pb-4"
                      data-slot="card-content"
                    >
                      <div
                        class="bg-accent animate-pulse rounded-ui h-5 w-16"
                        data-slot="skeleton"
                      />
                    </div>
                  </div>
                </div>
              </div>
              <div
                class="w-[348px] md:w-[256px] 2xl:w-[288px] basis-auto py-1 flex"
              >
                <div
                  class="w-full max-w-full min-w-0 flex"
                >
                  <div
                    class="bg-card text-card-foreground rounded-ui border-ui border-border shadow-ui border-0 overflow-hidden w-full max-w-full flex flex-col h-full gap-0 py-0"
                    data-slot="card"
                  >
                    <div
                      class="@container/card-header grid auto-rows-min grid-rows-[auto_auto] items-start gap-2 has-data-[slot=card-action]:grid-cols-[1fr_auto] [.border-b]:pb-6 p-0"
                      data-slot="card-header"
                    >
                      <div
                        class="bg-accent animate-pulse rounded-ui w-full"
                        data-slot="skeleton"
                        style="aspect-ratio: 0.8 / 1;"
                      />
                    </div>
                    <div
                      class="px-4 pt-3 pb-0"
                      data-slot="card-content"
                    >
                      <div
                        class="flex items-center gap-1"
                      >
                        <div
                          class="bg-accent animate-pulse rounded-ui h-7 w-7"
                          data-slot="skeleton"
                        />
                        <div
                          class="bg-accent animate-pulse rounded-ui h-7 w-7"
                          data-slot="skeleton"
                        />
                      </div>
                    </div>
                    <div
                      class="px-4 pt-2 pb-0"
                      data-slot="card-content"
                    >
                      <div
                        class="bg-accent animate-pulse rounded-ui h-4 w-full mb-1"
                        data-slot="skeleton"
                      />
                      <div
                        class="bg-accent animate-pulse rounded-ui h-4 w-3/4"
                        data-slot="skeleton"
                      />
                    </div>
                    <div
                      class="px-4 pt-2 pb-4"
                      data-slot="card-content"
                    >
                      <div
                        class="bg-accent animate-pulse rounded-ui h-5 w-16"
                        data-slot="skeleton"
                      />
                    </div>
                  </div>
                </div>
              </div>
              <div
                class="w-[348px] md:w-[256px] 2xl:w-[288px] basis-auto py-1 flex"
              >
                <div
                  class="w-full max-w-full min-w-0 flex"
                >
                  <div
                    class="bg-card text-card-foreground rounded-ui border-ui border-border shadow-ui border-0 overflow-hidden w-full max-w-full flex flex-col h-full gap-0 py-0"
                    data-slot="card"
                  >
                    <div
                      class="@container/card-header grid auto-rows-min grid-rows-[auto_auto] items-start gap-2 has-data-[slot=card-action]:grid-cols-[1fr_auto] [.border-b]:pb-6 p-0"
                      data-slot="card-header"
                    >
                      <div
                        class="bg-accent animate-pulse rounded-ui w-full"
                        data-slot="skeleton"
                        style="aspect-ratio: 0.8 / 1;"
                      />
                    </div>
                    <div
                      class="px-4 pt-3 pb-0"
                      data-slot="card-content"
                    >
                      <div
                        class="flex items-center gap-1"
                      >
                        <div
                          class="bg-accent animate-pulse rounded-ui h-7 w-7"
                          data-slot="skeleton"
                        />
                        <div
                          class="bg-accent animate-pulse rounded-ui h-7 w-7"
                          data-slot="skeleton"
                        />
                      </div>
                    </div>
                    <div
                      class="px-4 pt-2 pb-0"
                      data-slot="card-content"
                    >
                      <div
                        class="bg-accent animate-pulse rounded-ui h-4 w-full mb-1"
                        data-slot="skeleton"
                      />
                      <div
                        class="bg-accent animate-pulse rounded-ui h-4 w-3/4"
                        data-slot="skeleton"
                      />
                    </div>
                    <div
                      class="px-4 pt-2 pb-4"
                      data-slot="card-content"
                    >
                      <div
                        class="bg-accent animate-pulse rounded-ui h-5 w-16"
                        data-slot="skeleton"
                      />
                    </div>
                  </div>
                </div>
              </div>
            </div>
          </div>
          <div
            class="absolute left-0 top-1/2 -translate-y-1/2 -translate-x-1/2"
          >
            <div
              class="bg-accent animate-pulse rounded-ui h-9 w-9"
              data-slot="skeleton"
            />
          </div>
          <div
            class="absolute right-0 top-1/2 -translate-y-1/2 translate-x-1/2"
          >
            <div
              class="bg-accent animate-pulse rounded-ui h-9 w-9"
              data-slot="skeleton"
            />
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Product Skeletons stories snapshot > RecommendationsSkeleton story renders and matches snapshot 1`] = `
<div>
  <div
    class="p-4"
  >
    <div
      class="w-full section-container py-6 animate-pulse"
    >
      <div
        class="py-6"
      >
        <div
          class="relative w-full"
        >
          <div
            class="overflow-hidden"
          >
            <div
              class="flex -ml-4 items-stretch flex-nowrap"
            >
              <div
                class="w-[348px] md:w-[256px] 2xl:w-[288px] basis-auto py-1 flex"
              >
                <div
                  class="w-full max-w-full min-w-0 flex"
                >
                  <div
                    class="bg-card text-card-foreground rounded-ui border-ui border-border shadow-ui border-0 overflow-hidden w-full max-w-full flex flex-col h-full gap-0 py-0"
                    data-slot="card"
                  >
                    <div
                      class="@container/card-header grid auto-rows-min grid-rows-[auto_auto] items-start gap-2 has-data-[slot=card-action]:grid-cols-[1fr_auto] [.border-b]:pb-6 p-0"
                      data-slot="card-header"
                    >
                      <div
                        class="bg-accent animate-pulse rounded-ui w-full"
                        data-slot="skeleton"
                        style="aspect-ratio: 0.8 / 1;"
                      />
                    </div>
                    <div
                      class="px-4 pt-3 pb-0"
                      data-slot="card-content"
                    >
                      <div
                        class="flex items-center gap-1"
                      >
                        <div
                          class="bg-accent animate-pulse rounded-ui h-7 w-7"
                          data-slot="skeleton"
                        />
                        <div
                          class="bg-accent animate-pulse rounded-ui h-7 w-7"
                          data-slot="skeleton"
                        />
                      </div>
                    </div>
                    <div
                      class="px-4 pt-2 pb-0"
                      data-slot="card-content"
                    >
                      <div
                        class="bg-accent animate-pulse rounded-ui h-4 w-full mb-1"
                        data-slot="skeleton"
                      />
                      <div
                        class="bg-accent animate-pulse rounded-ui h-4 w-3/4"
                        data-slot="skeleton"
                      />
                    </div>
                    <div
                      class="px-4 pt-2 pb-4"
                      data-slot="card-content"
                    >
                      <div
                        class="bg-accent animate-pulse rounded-ui h-5 w-16"
                        data-slot="skeleton"
                      />
                    </div>
                  </div>
                </div>
              </div>
              <div
                class="w-[348px] md:w-[256px] 2xl:w-[288px] basis-auto py-1 flex"
              >
                <div
                  class="w-full max-w-full min-w-0 flex"
                >
                  <div
                    class="bg-card text-card-foreground rounded-ui border-ui border-border shadow-ui border-0 overflow-hidden w-full max-w-full flex flex-col h-full gap-0 py-0"
                    data-slot="card"
                  >
                    <div
                      class="@container/card-header grid auto-rows-min grid-rows-[auto_auto] items-start gap-2 has-data-[slot=card-action]:grid-cols-[1fr_auto] [.border-b]:pb-6 p-0"
                      data-slot="card-header"
                    >
                      <div
                        class="bg-accent animate-pulse rounded-ui w-full"
                        data-slot="skeleton"
                        style="aspect-ratio: 0.8 / 1;"
                      />
                    </div>
                    <div
                      class="px-4 pt-3 pb-0"
                      data-slot="card-content"
                    >
                      <div
                        class="flex items-center gap-1"
                      >
                        <div
                          class="bg-accent animate-pulse rounded-ui h-7 w-7"
                          data-slot="skeleton"
                        />
                        <div
                          class="bg-accent animate-pulse rounded-ui h-7 w-7"
                          data-slot="skeleton"
                        />
                      </div>
                    </div>
                    <div
                      class="px-4 pt-2 pb-0"
                      data-slot="card-content"
                    >
                      <div
                        class="bg-accent animate-pulse rounded-ui h-4 w-full mb-1"
                        data-slot="skeleton"
                      />
                      <div
                        class="bg-accent animate-pulse rounded-ui h-4 w-3/4"
                        data-slot="skeleton"
                      />
                    </div>
                    <div
                      class="px-4 pt-2 pb-4"
                      data-slot="card-content"
                    >
                      <div
                        class="bg-accent animate-pulse rounded-ui h-5 w-16"
                        data-slot="skeleton"
                      />
                    </div>
                  </div>
                </div>
              </div>
              <div
                class="w-[348px] md:w-[256px] 2xl:w-[288px] basis-auto py-1 flex"
              >
                <div
                  class="w-full max-w-full min-w-0 flex"
                >
                  <div
                    class="bg-card text-card-foreground rounded-ui border-ui border-border shadow-ui border-0 overflow-hidden w-full max-w-full flex flex-col h-full gap-0 py-0"
                    data-slot="card"
                  >
                    <div
                      class="@container/card-header grid auto-rows-min grid-rows-[auto_auto] items-start gap-2 has-data-[slot=card-action]:grid-cols-[1fr_auto] [.border-b]:pb-6 p-0"
                      data-slot="card-header"
                    >
                      <div
                        class="bg-accent animate-pulse rounded-ui w-full"
                        data-slot="skeleton"
                        style="aspect-ratio: 0.8 / 1;"
                      />
                    </div>
                    <div
                      class="px-4 pt-3 pb-0"
                      data-slot="card-content"
                    >
                      <div
                        class="flex items-center gap-1"
                      >
                        <div
                          class="bg-accent animate-pulse rounded-ui h-7 w-7"
                          data-slot="skeleton"
                        />
                        <div
                          class="bg-accent animate-pulse rounded-ui h-7 w-7"
                          data-slot="skeleton"
                        />
                      </div>
                    </div>
                    <div
                      class="px-4 pt-2 pb-0"
                      data-slot="card-content"
                    >
                      <div
                        class="bg-accent animate-pulse rounded-ui h-4 w-full mb-1"
                        data-slot="skeleton"
                      />
                      <div
                        class="bg-accent animate-pulse rounded-ui h-4 w-3/4"
                        data-slot="skeleton"
                      />
                    </div>
                    <div
                      class="px-4 pt-2 pb-4"
                      data-slot="card-content"
                    >
                      <div
                        class="bg-accent animate-pulse rounded-ui h-5 w-16"
                        data-slot="skeleton"
                      />
                    </div>
                  </div>
                </div>
              </div>
              <div
                class="w-[348px] md:w-[256px] 2xl:w-[288px] basis-auto py-1 flex"
              >
                <div
                  class="w-full max-w-full min-w-0 flex"
                >
                  <div
                    class="bg-card text-card-foreground rounded-ui border-ui border-border shadow-ui border-0 overflow-hidden w-full max-w-full flex flex-col h-full gap-0 py-0"
                    data-slot="card"
                  >
                    <div
                      class="@container/card-header grid auto-rows-min grid-rows-[auto_auto] items-start gap-2 has-data-[slot=card-action]:grid-cols-[1fr_auto] [.border-b]:pb-6 p-0"
                      data-slot="card-header"
                    >
                      <div
                        class="bg-accent animate-pulse rounded-ui w-full"
                        data-slot="skeleton"
                        style="aspect-ratio: 0.8 / 1;"
                      />
                    </div>
                    <div
                      class="px-4 pt-3 pb-0"
                      data-slot="card-content"
                    >
                      <div
                        class="flex items-center gap-1"
                      >
                        <div
                          class="bg-accent animate-pulse rounded-ui h-7 w-7"
                          data-slot="skeleton"
                        />
                        <div
                          class="bg-accent animate-pulse rounded-ui h-7 w-7"
                          data-slot="skeleton"
                        />
                      </div>
                    </div>
                    <div
                      class="px-4 pt-2 pb-0"
                      data-slot="card-content"
                    >
                      <div
                        class="bg-accent animate-pulse rounded-ui h-4 w-full mb-1"
                        data-slot="skeleton"
                      />
                      <div
                        class="bg-accent animate-pulse rounded-ui h-4 w-3/4"
                        data-slot="skeleton"
                      />
                    </div>
                    <div
                      class="px-4 pt-2 pb-4"
                      data-slot="card-content"
                    >
                      <div
                        class="bg-accent animate-pulse rounded-ui h-5 w-16"
                        data-slot="skeleton"
                      />
                    </div>
                  </div>
                </div>
              </div>
            </div>
          </div>
          <div
            class="absolute left-0 top-1/2 -translate-y-1/2 -translate-x-1/2"
          >
            <div
              class="bg-accent animate-pulse rounded-ui h-9 w-9"
              data-slot="skeleton"
            />
          </div>
          <div
            class="absolute right-0 top-1/2 -translate-y-1/2 translate-x-1/2"
          >
            <div
              class="bg-accent animate-pulse rounded-ui h-9 w-9"
              data-slot="skeleton"
            />
          </div>
        </div>
      </div>
    </div>
    <div
      class="w-full section-container py-6 animate-pulse"
    >
      <div
        class="py-6"
      >
        <div
          class="relative w-full"
        >
          <div
            class="overflow-hidden"
          >
            <div
              class="flex -ml-4 items-stretch flex-nowrap"
            >
              <div
                class="w-[348px] md:w-[256px] 2xl:w-[288px] basis-auto py-1 flex"
              >
                <div
                  class="w-full max-w-full min-w-0 flex"
                >
                  <div
                    class="bg-card text-card-foreground rounded-ui border-ui border-border shadow-ui border-0 overflow-hidden w-full max-w-full flex flex-col h-full gap-0 py-0"
                    data-slot="card"
                  >
                    <div
                      class="@container/card-header grid auto-rows-min grid-rows-[auto_auto] items-start gap-2 has-data-[slot=card-action]:grid-cols-[1fr_auto] [.border-b]:pb-6 p-0"
                      data-slot="card-header"
                    >
                      <div
                        class="bg-accent animate-pulse rounded-ui w-full"
                        data-slot="skeleton"
                        style="aspect-ratio: 0.8 / 1;"
                      />
                    </div>
                    <div
                      class="px-4 pt-3 pb-0"
                      data-slot="card-content"
                    >
                      <div
                        class="flex items-center gap-1"
                      >
                        <div
                          class="bg-accent animate-pulse rounded-ui h-7 w-7"
                          data-slot="skeleton"
                        />
                        <div
                          class="bg-accent animate-pulse rounded-ui h-7 w-7"
                          data-slot="skeleton"
                        />
                      </div>
                    </div>
                    <div
                      class="px-4 pt-2 pb-0"
                      data-slot="card-content"
                    >
                      <div
                        class="bg-accent animate-pulse rounded-ui h-4 w-full mb-1"
                        data-slot="skeleton"
                      />
                      <div
                        class="bg-accent animate-pulse rounded-ui h-4 w-3/4"
                        data-slot="skeleton"
                      />
                    </div>
                    <div
                      class="px-4 pt-2 pb-4"
                      data-slot="card-content"
                    >
                      <div
                        class="bg-accent animate-pulse rounded-ui h-5 w-16"
                        data-slot="skeleton"
                      />
                    </div>
                  </div>
                </div>
              </div>
              <div
                class="w-[348px] md:w-[256px] 2xl:w-[288px] basis-auto py-1 flex"
              >
                <div
                  class="w-full max-w-full min-w-0 flex"
                >
                  <div
                    class="bg-card text-card-foreground rounded-ui border-ui border-border shadow-ui border-0 overflow-hidden w-full max-w-full flex flex-col h-full gap-0 py-0"
                    data-slot="card"
                  >
                    <div
                      class="@container/card-header grid auto-rows-min grid-rows-[auto_auto] items-start gap-2 has-data-[slot=card-action]:grid-cols-[1fr_auto] [.border-b]:pb-6 p-0"
                      data-slot="card-header"
                    >
                      <div
                        class="bg-accent animate-pulse rounded-ui w-full"
                        data-slot="skeleton"
                        style="aspect-ratio: 0.8 / 1;"
                      />
                    </div>
                    <div
                      class="px-4 pt-3 pb-0"
                      data-slot="card-content"
                    >
                      <div
                        class="flex items-center gap-1"
                      >
                        <div
                          class="bg-accent animate-pulse rounded-ui h-7 w-7"
                          data-slot="skeleton"
                        />
                        <div
                          class="bg-accent animate-pulse rounded-ui h-7 w-7"
                          data-slot="skeleton"
                        />
                      </div>
                    </div>
                    <div
                      class="px-4 pt-2 pb-0"
                      data-slot="card-content"
                    >
                      <div
                        class="bg-accent animate-pulse rounded-ui h-4 w-full mb-1"
                        data-slot="skeleton"
                      />
                      <div
                        class="bg-accent animate-pulse rounded-ui h-4 w-3/4"
                        data-slot="skeleton"
                      />
                    </div>
                    <div
                      class="px-4 pt-2 pb-4"
                      data-slot="card-content"
                    >
                      <div
                        class="bg-accent animate-pulse rounded-ui h-5 w-16"
                        data-slot="skeleton"
                      />
                    </div>
                  </div>
                </div>
              </div>
              <div
                class="w-[348px] md:w-[256px] 2xl:w-[288px] basis-auto py-1 flex"
              >
                <div
                  class="w-full max-w-full min-w-0 flex"
                >
                  <div
                    class="bg-card text-card-foreground rounded-ui border-ui border-border shadow-ui border-0 overflow-hidden w-full max-w-full flex flex-col h-full gap-0 py-0"
                    data-slot="card"
                  >
                    <div
                      class="@container/card-header grid auto-rows-min grid-rows-[auto_auto] items-start gap-2 has-data-[slot=card-action]:grid-cols-[1fr_auto] [.border-b]:pb-6 p-0"
                      data-slot="card-header"
                    >
                      <div
                        class="bg-accent animate-pulse rounded-ui w-full"
                        data-slot="skeleton"
                        style="aspect-ratio: 0.8 / 1;"
                      />
                    </div>
                    <div
                      class="px-4 pt-3 pb-0"
                      data-slot="card-content"
                    >
                      <div
                        class="flex items-center gap-1"
                      >
                        <div
                          class="bg-accent animate-pulse rounded-ui h-7 w-7"
                          data-slot="skeleton"
                        />
                        <div
                          class="bg-accent animate-pulse rounded-ui h-7 w-7"
                          data-slot="skeleton"
                        />
                      </div>
                    </div>
                    <div
                      class="px-4 pt-2 pb-0"
                      data-slot="card-content"
                    >
                      <div
                        class="bg-accent animate-pulse rounded-ui h-4 w-full mb-1"
                        data-slot="skeleton"
                      />
                      <div
                        class="bg-accent animate-pulse rounded-ui h-4 w-3/4"
                        data-slot="skeleton"
                      />
                    </div>
                    <div
                      class="px-4 pt-2 pb-4"
                      data-slot="card-content"
                    >
                      <div
                        class="bg-accent animate-pulse rounded-ui h-5 w-16"
                        data-slot="skeleton"
                      />
                    </div>
                  </div>
                </div>
              </div>
              <div
                class="w-[348px] md:w-[256px] 2xl:w-[288px] basis-auto py-1 flex"
              >
                <div
                  class="w-full max-w-full min-w-0 flex"
                >
                  <div
                    class="bg-card text-card-foreground rounded-ui border-ui border-border shadow-ui border-0 overflow-hidden w-full max-w-full flex flex-col h-full gap-0 py-0"
                    data-slot="card"
                  >
                    <div
                      class="@container/card-header grid auto-rows-min grid-rows-[auto_auto] items-start gap-2 has-data-[slot=card-action]:grid-cols-[1fr_auto] [.border-b]:pb-6 p-0"
                      data-slot="card-header"
                    >
                      <div
                        class="bg-accent animate-pulse rounded-ui w-full"
                        data-slot="skeleton"
                        style="aspect-ratio: 0.8 / 1;"
                      />
                    </div>
                    <div
                      class="px-4 pt-3 pb-0"
                      data-slot="card-content"
                    >
                      <div
                        class="flex items-center gap-1"
                      >
                        <div
                          class="bg-accent animate-pulse rounded-ui h-7 w-7"
                          data-slot="skeleton"
                        />
                        <div
                          class="bg-accent animate-pulse rounded-ui h-7 w-7"
                          data-slot="skeleton"
                        />
                      </div>
                    </div>
                    <div
                      class="px-4 pt-2 pb-0"
                      data-slot="card-content"
                    >
                      <div
                        class="bg-accent animate-pulse rounded-ui h-4 w-full mb-1"
                        data-slot="skeleton"
                      />
                      <div
                        class="bg-accent animate-pulse rounded-ui h-4 w-3/4"
                        data-slot="skeleton"
                      />
                    </div>
                    <div
                      class="px-4 pt-2 pb-4"
                      data-slot="card-content"
                    >
                      <div
                        class="bg-accent animate-pulse rounded-ui h-5 w-16"
                        data-slot="skeleton"
                      />
                    </div>
                  </div>
                </div>
              </div>
            </div>
          </div>
          <div
            class="absolute left-0 top-1/2 -translate-y-1/2 -translate-x-1/2"
          >
            <div
              class="bg-accent animate-pulse rounded-ui h-9 w-9"
              data-slot="skeleton"
            />
          </div>
          <div
            class="absolute right-0 top-1/2 -translate-y-1/2 translate-x-1/2"
          >
            <div
              class="bg-accent animate-pulse rounded-ui h-9 w-9"
              data-slot="skeleton"
            />
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;
